// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeshNetwork should render correctly 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c1 {
  font-size: var(--acx-body-4-font-size);
  display: grid;
  grid-template-columns: 180px 1fr;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c2 {
  margin-bottom: var(--acx-descriptions-space);
  background-color: var(--acx-neutrals-10);
  width: 600px;
  padding-top: 10px;
  padding-right: 100px;
}

.c2 ul li {
  padding-bottom: 10px;
}

.c3 {
  font-size: var(--acx-body-4-font-size);
  display: grid;
  line-height: 32px;
  grid-template-columns: 180px 300px 80px 45px;
}

.c3 svg {
  margin-top: 8px;
}

.c4 {
  font-size: var(--acx-body-4-font-size);
  display: grid;
  line-height: 32px;
  grid-template-columns: 180px 300px 80px 45px;
}

.c4 svg {
  margin-top: 8px;
}

.c4 textarea {
  resize: none;
}

<div
    class="c0"
  >
    <label
      class="c1"
      width="180px"
    >
      Mesh Network
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="true"
                  class="ant-switch ant-switch-checked"
                  data-testid="mesh-switch"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="c2"
    >
      <ul>
        <li>
          Enabling mesh for a venue creates a new WLAN for mesh communication between Access Points
        </li>
        <li>
          Enabling mesh for a venue is a global configuration and once mesh links are formed (automatically), it cannot be undone.
        </li>
      </ul>
    </div>
    <div
      class="c3"
    >
      Mesh Network Name
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input ant-input-borderless"
                  type="text"
                  value="Mesh-test"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-link"
        disabled=""
        style="margin-top: 4px;"
        type="button"
      >
        <span>
          Change
        </span>
      </button>
      <svg
        data-testid="InformationSolid"
      />
    </div>
    <div
      class="c4"
    >
      Mesh PSK
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input ant-input-borderless"
                  rows="3"
                >
                  1234
                </textarea>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-link"
        disabled=""
        style="margin-top: 4px;"
        type="button"
      >
        <span>
          Change
        </span>
      </button>
      <svg
        data-testid="InformationSolid"
      />
    </div>
    <label
      class="c1"
      width="180px"
    >
      Mesh Radio
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline"
                >
                  <div
                    class="ant-space ant-space-vertical"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-disabled ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio ant-radio-checked ant-radio-disabled"
                        >
                          <input
                            checked=""
                            class="ant-radio-input"
                            disabled=""
                            type="radio"
                            value="5-GHz"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          5 & 6 GHz
                        </span>
                      </label>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-disabled ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio ant-radio-disabled"
                        >
                          <input
                            class="ant-radio-input"
                            disabled=""
                            type="radio"
                            value="2.4-GHz"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          2.4 GHz
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`MeshNetwork should render disabled switch button correctly 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c1 {
  font-size: var(--acx-body-4-font-size);
  display: grid;
  grid-template-columns: 180px 1fr;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

<div
    class="c0"
  >
    <label
      class="c1"
      width="180px"
    >
      Mesh Network
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="ant-tooltip-disabled-compatible-wrapper"
                  style="display: inline-block; cursor: not-allowed;"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch ant-switch-disabled"
                    data-testid="mesh-switch"
                    disabled=""
                    role="switch"
                    style="pointer-events: none;"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;
